<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    tools:context=".ui.addGrade.AddGradeFragment" >


    <EditText
        android:id="@+id/editTextFirstName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="name"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/form_first_name"
        android:layout_marginTop="10sp"
        android:text="" />

    <EditText
        android:id="@+id/editTextLastName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:autofillHints="lastname"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/form_last_name"
        android:layout_marginTop="10sp"
        android:text="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_course"
        android:layout_marginTop="10sp"
        />
    <ListView
        android:id="@+id/listViewCourse"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/form_credits"
        android:layout_marginTop="10sp"
        />

    <RadioGroup
        android:id="@+id/radioGroupCredits"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content" >


        <RadioButton
            android:id="@+id/radioButtonCredit1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_credits_socore_01" />

        <RadioButton
            android:id="@+id/radioButtonCredit2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_credits_socore_02" />

        <RadioButton
            android:id="@+id/radioButtonCredit3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_credits_socore_03" />

        <RadioButton
            android:id="@+id/radioButtonCredit4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/form_credits_socore_04" />

    </RadioGroup>

    <EditText
        android:id="@+id/editTextMark"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:autofillHints="mark"
        android:hint="@string/form_mark"
        android:layout_marginTop="10sp"
        android:text="" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/form_button" />

</LinearLayout>