<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ui.search.SearchFragment" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="18sp"
            android:textStyle="bold"
            android:paddingTop="10sp"
            android:text="@string/search_title_by" />

        <RadioGroup
            android:id="@+id/radioGroupSearch"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <RadioButton
                android:id="@+id/radioButtonSearchId"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/search_id" />

            <RadioButton
                android:id="@+id/radioButtonSearchCurse"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:textSize="15sp"
                android:text="@string/search_course" />

        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextSearchId"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/search_id" />

    <ListView
        android:id="@+id/listViewSearchCourse"
        android:layout_width="match_parent"
        android:layout_height="220dp" />

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_button" />

    <TextView
        android:id="@+id/textViewMessages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:padding="30dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewGrades"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>